# PolarBear

./: .dockerignore  .gitignore  Design Doc.gdoc  Design Doc.txt  README.md  cloudbuild.yaml  sample_products.csv  sample_products_2.csv  sample_products_images.csv
backend/: Dockerfile  README.md  analytics.db  doc_map.pkl  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: analytics.py  ingestion.py  products.py  search.py
backend/app/core/: config.py  database.py
backend/app/services/ingestion/: parser.py
backend/app/services/search/: indexer.py  searcher.py
docs/phase1/: implementation_plan_phase1.md  walkthrough_phase1.md
docs/phase2/: walkthrough_phase2.md
docs/phase3/: implementation_plan_phase3.md  walkthrough_phase3.md
docs/phase4/: implementation_plan_phase4.md  walkthrough_phase4.md
docs/phase5/: implementation_plan_phase5.md  implementation_plan_phase5_extended.md  implementation_plan_phase5_mods.md  walkthrough_phase5.md  walkthrough_phase5_extended.md  walkthrough_phase5_mods.md
docs/phase6/: implementation_plan_phase6.md  walkthrough_phase6.md
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: Navbar.tsx
infrastructure/: deploy_meilisearch_vm.sh  docker-compose.yml  setup_gcp.sh
